--- a/notebooks/Create Repository Dispatch Event.ipynb
+++ b/notebooks/Create Repository Dispatch Event.ipynb
@@ -226,11 +226,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a Check Run\n",
+    "\n",
+    "You probably want to do this with Actions, because otherwhise Check Runs require a GitHub App (you cannot use an OAuth App)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = f'https://api.github.com/repos/{owner}/{repo}/check-runs'\n",
+    "headers = {'authorization': f'token {personal_access_token}',\n",
+    "           'accept': 'application/vnd.github.everest-preview+json'}"
+   ]
   }
  ],
  "metadata": {
