notes on checkruns

--- a/notebooks/Create Repository Dispatch Event.ipynb
+++ b/notebooks/Create Repository Dispatch Event.ipynb
@@ -236,14 +236,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GITHUB_ACTIONS_TOKEN = 'TOKEN HERE'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = f'https://api.github.com/repos/{owner}/{repo}/check-runs'\n",
-    "headers = {'authorization': f'token {personal_access_token}',\n",
-    "           'accept': 'application/vnd.github.everest-preview+json'}"
+    "headers = {'authorization': f'token {GITHUB_ACTIONS_TOKEN}',\n",
+    "           'accept': 'application/vnd.github.antiope-preview+json'}\n",
+    "\n",
+    "data = {\n",
+    "    'name': 'test-check-run',\n",
+    "    'head_sha': '18699878076bbb1af58ead323e9070fb2dd8ce21',\n",
+    "    'status': 'in_progress',\n",
+    "    'details_url': 'http://34.95.87.135/workflows',\n",
+    "    'output':{\n",
+    "        'title': 'A sample check run',\n",
+    "        'summary': 'This check run is to make sure we understand how to start / stop a check run',\n",
+    "        'text': 'this is the text of the check run.'\n",
+    "    }\n",
+    "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(url=url, headers=headers, json=data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above code automatically created a check run on the right branch according to the `SHA`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Update the text of the check run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    'name': 'test-check-run',\n",
+    "    'head_sha': '18699878076bbb1af58ead323e9070fb2dd8ce21',\n",
+    "    'status': 'in_progress',\n",
+    "    'details_url': 'http://34.95.87.135/workflows',\n",
+    "    'output':{\n",
+    "        'title': 'Running - A sample check run',\n",
+    "        'summary': 'Running - This check run is to make sure we understand how to start / stop a check run',\n",
+    "        'text': 'Running - this is the text of the check run.'\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [201]>"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = requests.post(url=url, headers=headers, json=data)\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Now, let's complete the check run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    'name': 'test-check-run',\n",
+    "    'head_sha': '18699878076bbb1af58ead323e9070fb2dd8ce21',\n",
+    "    'status': 'completed',\n",
+    "    'conclusion': 'success',\n",
+    "    'details_url': 'http://34.95.87.135/workflows',\n",
+    "        'output':{\n",
+    "        'title': 'COMPLETED - A sample check run',\n",
+    "        'summary': 'COMPLETED - This check run is to make sure we understand how to start / stop a check run',\n",
+    "        'text': 'COMPLETED - this is the text of the check run.'\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(url=url, headers=headers, json=data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [201]>"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above code closed the check run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
