--- a/notebooks/Create Repository Dispatch Event.ipynb
+++ b/notebooks/Create Repository Dispatch Event.ipynb
@@ -236,16 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    "GITHUB_ACTIONS_TOKEN = 'TOKEN HERE'"
+    "GITHUB_ACTIONS_TOKEN = 'YOUR TOKEN'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,24 +255,44 @@
     "\n",
     "data = {\n",
     "    'name': 'test-check-run',\n",
-    "    'head_sha': '18699878076bbb1af58ead323e9070fb2dd8ce21',\n",
+    "    'head_sha': '9c95ff6eda13cf0334e3d056485385fce87eb46c',\n",
     "    'status': 'in_progress',\n",
     "    'details_url': 'http://34.95.87.135/workflows',\n",
     "    'output':{\n",
     "        'title': 'A sample check run',\n",
     "        'summary': 'This check run is to make sure we understand how to start / stop a check run',\n",
     "        'text': 'this is the text of the check run.'\n",
-    "    }\n",
+    "    },\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
     "response = requests.post(url=url, headers=headers, json=data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "201"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.status_code"
    ]
   },
   {
@@ -297,7 +317,7 @@
    "source": [
     "data = {\n",
     "    'name': 'test-check-run',\n",
-    "    'head_sha': '18699878076bbb1af58ead323e9070fb2dd8ce21',\n",
+    "    'head_sha': '9c95ff6eda13cf0334e3d056485385fce87eb46c',\n",
     "    'status': 'in_progress',\n",
     "    'details_url': 'http://34.95.87.135/workflows',\n",
     "    'output':{\n",
@@ -338,13 +358,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = {\n",
     "    'name': 'test-check-run',\n",
-    "    'head_sha': '18699878076bbb1af58ead323e9070fb2dd8ce21',\n",
+    "    'head_sha': '9c95ff6eda13cf0334e3d056485385fce87eb46c',\n",
     "    'status': 'completed',\n",
     "    'conclusion': 'success',\n",
     "    'details_url': 'http://34.95.87.135/workflows',\n",
@@ -358,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,16 +387,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [201]>"
+       "<Response [401]>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
