--- a/notebooks/Repository Dispatch and Checks.ipynb
+++ b/notebooks/Repository Dispatch and Checks.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Repository Dispatch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Shows how to create a [repository dispatch event](https://developer.github.com/v3/repos/#create-a-repository-dispatch-event)\n",
     "\n",
     "Notes how to test from the command line\n",
