--- a/notebooks/Repository Dispatch and Checks.ipynb
+++ b/notebooks/Repository Dispatch and Checks.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,16 +243,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
-    "GITHUB_ACTIONS_TOKEN = 'YOUR TOKEN'"
+    "GITHUB_ACTIONS_TOKEN = 'YOUR_TOKEN'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SHA='5a6ca02107d6420c043b640179a17bbd9d74344e'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,21 +270,22 @@
     "           'accept': 'application/vnd.github.antiope-preview+json'}\n",
     "\n",
     "data = {\n",
-    "    'name': 'test-check-run',\n",
-    "    'head_sha': '9c95ff6eda13cf0334e3d056485385fce87eb46c',\n",
+    "    'name': 'test-check-run-2',\n",
+    "    'head_sha': f'{SHA}',\n",
     "    'status': 'in_progress',\n",
     "    'details_url': 'http://34.95.87.135/workflows',\n",
     "    'output':{\n",
     "        'title': 'A sample check run',\n",
     "        'summary': 'This check run is to make sure we understand how to start / stop a check run',\n",
-    "        'text': 'this is the text of the check run.'\n",
+    "        'text': 'this is the text of the check run.',\n",
+    "        'images': [{'alt': 'sample', 'image_url': 'http://34.95.87.135/workflows', 'caption':'argo dash'}]\n",
     "    },\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +303,7 @@
        "201"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +334,7 @@
    "source": [
     "data = {\n",
     "    'name': 'test-check-run',\n",
-    "    'head_sha': '9c95ff6eda13cf0334e3d056485385fce87eb46c',\n",
+    "    'head_sha': f'{SHA}',\n",
     "    'status': 'in_progress',\n",
     "    'details_url': 'http://34.95.87.135/workflows',\n",
     "    'output':{\n",
@@ -365,13 +375,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = {\n",
-    "    'name': 'test-check-run',\n",
-    "    'head_sha': '9c95ff6eda13cf0334e3d056485385fce87eb46c',\n",
+    "    'name': 'test-check-run-2',\n",
+    "    'head_sha': f'{SHA}',\n",
     "    'status': 'completed',\n",
     "    'conclusion': 'success',\n",
     "    'details_url': 'http://34.95.87.135/workflows',\n",
@@ -385,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,16 +404,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [401]>"
+       "<Response [201]>"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
