--- a/notebooks/Repository Dispatch and Checks.ipynb
+++ b/notebooks/Repository Dispatch and Checks.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This notebook contains notes on repository dispatch and the checks api"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Repository Dispatch"
    ]
   },
