--- a/notebooks/Repository Dispatch and Checks.ipynb
+++ b/notebooks/Repository Dispatch and Checks.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook contains notes on repository dispatch and the checks api"
+    "This notebook contains notes on repository dispatch and the checks api.  The motivation is to use these APIs to facilitate MLOps."
    ]
   },
   {
