--- a/notebooks/Markdown-Table-From-Wandb-csv.ipynb
+++ b/notebooks/Markdown-Table-From-Wandb-csv.ipynb
@@ -113,6 +113,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Notes on making issue comments\n",
+    "\n",
+    "```bash\n",
+    "## Set Vars\n",
+    "URI=https://api.github.com\n",
+    "API_VERSION=v3\n",
+    "API_HEADER=\"Accept: application/vnd.github.${API_VERSION}+json\"\n",
+    "AUTH_HEADER=\"Authorization: token ${GITHUB_TOKEN}\"\n",
+    "\n",
+    "# Create a comment with APIv3 # POST /repos/:owner/:repo/issues/:issue_number/comments\n",
+    "curl -XPOST -sSL \\\n",
+    "    -d \"{\\\"body\\\": \\\"$MESSAGE\\\"}\" \\\n",
+    "    -H \"${AUTH_HEADER}\" \\\n",
+    "    -H \"${API_HEADER}\" \\\n",
+    "    \"${URI}/repos/${GITHUB_REPOSITORY}/issues/${ISSUE_NUMBER}/comments\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {'Accept': 'application/vnd.github.v3+json'\n",
+    "           'Authorization': f'token {token}'}\n",
+    "\n",
+    "url = f\"https://api.github.com/repos/{nwo}/issues/{pr_num}/comments\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
