--- a/notebooks/Markdown-Table-From-Wandb-csv.ipynb
+++ b/notebooks/Markdown-Table-From-Wandb-csv.ipynb
@@ -147,6 +147,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove Issue Label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token = 'v1.bb846e58ef8a00fe8bb54607ffe07fc6be4769ad'\n",
+    "nwo='machine-learning-apps/actions-ml-cicd'\n",
+    "pr_num=15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {'Accept': 'application/vnd.github.symmetra-preview+json',\n",
+    "           'Authorization': f'token {token}'}\n",
+    "url = f\"https://api.github.com/repos/{nwo}/issues/{pr_num}/labels/Full%20Test%20Pending\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = requests.delete(url=url, headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add Isssue Label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f\"https://api.github.com/repos/{nwo}/issues/{pr_num}/labels\"\n",
+    "data = {\"labels\": [\"Full Test Complete\"]}\n",
+    "result = requests.post(url=url, headers=headers, json=data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'[{\"id\":1594650928,\"node_id\":\"MDU6TGFiZWwxNTk0NjUwOTI4\",\"url\":\"https://api.github.com/repos/machine-learning-apps/actions-ml-cicd/labels/Full%20Test%20Complete\",\"name\":\"Full Test Complete\",\"color\":\"ededed\",\"default\":false,\"description\":null}]'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result.content)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
