--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Descriptive Statistics\n",
-    "> Show descriptive statistics of the dataset"
+    "# EDA\n",
+    "> Exploratory Data Analysis"
    ]
   },
   {
