--- a/notebooks/cool_stuff.ipynb
+++ b/notebooks/cool_stuff.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This is some stuff\n",
+    "# This is some stuff test\n",
     "\n",
     "> Some more stuff"
    ]
@@ -17,6 +17,13 @@
    "source": [
     "import scipy"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -35,7 +42,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
