--- a/notebooks/cool_stuff.ipynb
+++ b/notebooks/cool_stuff.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This is some stuff test\n",
+    "# This is some stuff\n",
     "\n",
     "> Some more stuff"
    ]
