--- a/notebooks/cool_stuff.ipynb
+++ b/notebooks/cool_stuff.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test: This is some different stuff\n",
+    "# Test Report\n",
     "\n",
     "> Some more stuff"
    ]
