update to check actions

--- a/notebooks/cool_stuff.ipynb
+++ b/notebooks/cool_stuff.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Test Report\n",
     "\n",
-    "> Some more stuff"
+    "> Testing Notebook build"
    ]
   },
   {
@@ -15,15 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy"
+    "import scipy\n",
+    "import sklearn"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
