--- a/notebooks/cool_stuff.ipynb
+++ b/notebooks/cool_stuff.ipynb
@@ -18,6 +18,20 @@
     "import scipy\n",
     "import sklearn"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a test update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -36,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
