--- a/notebooks/cool_stuff.ipynb
+++ b/notebooks/cool_stuff.ipynb
@@ -28,6 +28,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var = 40"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
